# aran_tomi_projects

./: .gitignore  README.md
.github/workflows/: cmake-single-platform-project2.yml  cmake-single-platform.yml
delivery3/: app  bubble.c  bubble.h  delivery3.md  merge.c  merge.h  search  search.c  sort.c
delivery4/: hash.c  markdown.md  prova  prova.c
delivery4/testing/: iterative.c  recursive.c
project1/: CMakeLists.txt  TODO.md  main  main.c  project1.h
project1/init_files/: template1.c
project2/: CMakeLists.txt  TODO.md  a-star-notes.md  algorithm.c  algorithm.h  app  dijkstra.c  dijkstra.h  gen_tree.c  globals.h  graph.c  graph.h  instrucciones.md  large.h  main.c  medium.h  notes.md  queue.c  queue.h  small.h  stack.c  stack.h  temp.c  tree.c  tree.h
project2/Aran/: CMakeLists.txt  app  dataset.c  dataset.h  gen_tree.c  own_small.h  queue.c  queue.h  small.h  stack.c  stack.h
project2/datasets/: large.h  medium.h  own_medium.h  own_small.h  small.h
